syntax = "proto3";
option go_package = "../proto";

service StreamRequestServer{
  // 客户端流模式
  // 接收数据流，返回普通的响应
  rpc ClientStream(stream StreamRequestRequest) returns (StreamRequestResponse);
}

// 流式请求：和普通请求没有区别
message StreamRequestRequest{
  string data = 1;
}

// 流式响应：和普通响应没有区别
message StreamRequestResponse{
  string data = 1;
}